fix footer being too angled on mobile

--- a/src/scss/GeneralLayout/_footer.scss
+++ b/src/scss/GeneralLayout/_footer.scss
@@ -59,8 +59,15 @@
 	}
  }
 
- @media screen and (max-width: 425px) {
+ @media screen and (max-width: 768px) {
 	 #app-footer {
+		padding-top: 30px;
+		clip-path: polygon(
+			0 20%, /* left top */
+			100% 0, /* right top */ 
+			100% 100%, /* right bottom */
+			0 100% /* left bottom */
+		);
 		 .icon-info { 
 			font-size: 8px;
 		 }
